--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="button-links">
-      <a href="aboutus.html" class="link-btn">About us🎬</a>
+      <a href="Aboutus.html" class="link-btn">About us🎬</a>
       <a href="project.html" class="link-btn">Projects📸</a>
       <a href="newsletter.html" class="link-btn">Sign up for our newsletter 📨</a>
       <a href="volunteer.html" class="link-btn">volunteer with us🙌</a>
